--- a/Front/package.json
+++ b/Front/package.json
@@ -21,7 +21,6 @@
     "moment": "^2.27.0",
     "mtgsdk-ts": "^1.1.2",
     "node-env": "^0.1.6",
-    "node-sass": "^4.14.1",
     "qrcode.react": "^1.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -88,6 +87,7 @@
     "@types/yup": "^0.29.5",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-baseui": "^9.95.1",
@@ -96,7 +96,9 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.20",
+    "postcss": "^8.3.11",
     "prettier": "^2.0.5",
-    "proxy-agent": "^3.1.1"
+    "proxy-agent": "^3.1.1",
+    "tailwindcss": "^2.2.19"
   }
 }
