--- a/Front/package.json
+++ b/Front/package.json
@@ -3,51 +3,63 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.1.2",
     "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
     "@types/classnames": "^2.2.10",
+    "@types/jest": "^24.9.1",
+    "@types/node": "^14.6.0",
     "@types/qrcode.react": "^1.0.1",
+    "@types/react": "^17.0.35",
     "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-csv": "^1.1.1",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.2",
+    "@types/styletron-standard": "^2.0.1",
     "@types/uuid": "^8.3.0",
+    "@types/webpack-env": "^1.15.2",
+    "@types/yup": "^0.29.5",
     "amazon-cognito-identity-js": "^4.3.3",
-    "aws-amplify": "^3.0.23",
-    "aws-amplify-react": "^4.1.22",
+    "aws-amplify": "^4.3.8",
+    "aws-amplify-react": "^5.1.9",
     "aws-sdk": "^2.736.0",
-    "axios": "^0.19.2",
+    "axios": "^0.24.0",
     "bootstrap": "^4.5.2",
-    "bootstrap-scss": "^4.5.2",
     "classnames": "^2.2.6",
     "framer-motion": "^2.5.1",
     "moment": "^2.27.0",
     "mtgsdk-ts": "^1.1.2",
     "node-env": "^0.1.6",
     "qrcode.react": "^1.0.0",
-    "react": "^16.13.1",
+    "react": "^17.0.2",
     "react-bootstrap": "^1.3.0",
     "react-copy-to-clipboard": "^5.0.2",
     "react-csv": "^2.0.3",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^5.7.2",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.4",
     "react-responsive-modal": "^5.0.3",
-    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
+    "react-scripts": "4.0.3",
     "react-use": "^15.3.4",
     "redux-persist": "^6.0.0",
-    "typescript": "^3.9.7",
+    "typescript": "^4.1.2",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "craco start",
     "start:withssm": "npm run ssm:parameters && react-scripts start",
-    "build": "npm run ssm:parameters && NODE_ENV=production react-scripts build",
+    "build": "npm run ssm:parameters && NODE_ENV=production craco build",
     "ssm:parameters": "node ./ssm-parameters.js",
-    "test": "react-scripts test",
+    "test": "craco test",
     "eject": "react-scripts eject",
-    "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "deploy": "./deploy.sh"
+    "lint": "eslint 'src/**/*.{js,ts,tsx}' --quiet --fix",
+    "deploy": "./deploy.sh",
+    "analyze": "cross-env REACT_APP_INTERACTIVE_ANALYZE=1 npm run build"
   },
   "lint-staged": {
     "*.{js,ts,tsx}": [
@@ -55,7 +67,10 @@
     ]
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -70,25 +85,13 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^14.6.0",
-    "@types/react": "^16.9.46",
-    "@types/react-csv": "^1.1.1",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/styletron-engine-atomic": "^1.1.0",
-    "@types/styletron-react": "^5.0.2",
-    "@types/styletron-standard": "^2.0.1",
-    "@types/webpack-env": "^1.15.2",
-    "@types/yup": "^0.29.5",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
-    "autoprefixer": "^10.4.0",
-    "eslint": "^6.6.0",
+    "autoprefixer": "^9.8.6",
+    "cross-env": "^7.0.3",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-baseui": "^9.95.1",
     "eslint-plugin-prettier": "^3.1.4",
@@ -96,9 +99,10 @@
     "husky": "^4.2.5",
     "lint-staged": "^10.2.11",
     "lodash": "^4.17.20",
-    "postcss": "^8.3.11",
-    "prettier": "^2.0.5",
+    "postcss": "^7",
+    "postcss-nested": "^4.2.3",
+    "prettier": "^2.3.1",
     "proxy-agent": "^3.1.1",
-    "tailwindcss": "^2.2.19"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   }
 }
