--- a/Front/tsconfig.json
+++ b/Front/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["node"],
     "target": "es5",
     "lib": [
       "dom",
@@ -10,20 +11,24 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
-    "baseUrl": "src"
+    // "jsx": "react",
+    "jsx": "react-jsx",
+    "baseUrl": "src",
+    // "noFallthroughCasesInSwitch": true,
+    "noImplicitAny": false
   },
   "include": [
     "src"
   ],
   "exclude": [
+    "node_modules",
     "./amplify/**/*"
   ]
 }
