--- a/Front/package.json
+++ b/Front/package.json
@@ -6,22 +6,6 @@
     "@craco/craco": "^6.1.2",
     "@material-ui/core": "^4.11.0",
     "@reduxjs/toolkit": "^1.4.0",
-    "@types/classnames": "^2.2.10",
-    "@types/jest": "^24.9.1",
-    "@types/node": "^14.6.0",
-    "@types/qrcode.react": "^1.0.1",
-    "@types/react": "^17.0.35",
-    "@types/react-copy-to-clipboard": "^4.3.0",
-    "@types/react-csv": "^1.1.1",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-redux": "^7.1.20",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/styletron-engine-atomic": "^1.1.0",
-    "@types/styletron-react": "^5.0.2",
-    "@types/styletron-standard": "^2.0.1",
-    "@types/uuid": "^8.3.0",
-    "@types/webpack-env": "^1.15.2",
-    "@types/yup": "^0.29.5",
     "amazon-cognito-identity-js": "^4.3.3",
     "aws-amplify": "^4.3.8",
     "aws-amplify-react": "^5.1.9",
@@ -68,9 +52,17 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+      "react-app"
+    ],
+    "rules": {
+      "@typescript-eslint/ban-ts-ignore": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "@typescript-eslint/camelcase": "off",
+      "react/no-unescaped-entities": "off",
+      "@typescript-eslint/no-use-before-define": "off",
+      "@typescript-eslint/no-var-requires": "off",
+      "react/display-name": "off"
+    }
   },
   "browserslist": {
     "production": [
@@ -88,8 +80,22 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "@typescript-eslint/parser": "^2.30.0",
+    "@types/node": "^16.11.9",
+    "@types/classnames": "^2.2.10",
+    "@types/jest": "^24.9.1",
+    "@types/qrcode.react": "^1.0.1",
+    "@types/react": "^17.0.2",
+    "@types/react-copy-to-clipboard": "^4.3.0",
+    "@types/react-csv": "^1.1.1",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.2",
+    "@types/styletron-standard": "^2.0.1",
+    "@types/uuid": "^8.3.0",
+    "@types/webpack-env": "^1.15.2",
+    "@types/yup": "^0.29.5",
     "autoprefixer": "^9.8.6",
     "cross-env": "^7.0.3",
     "eslint-config-prettier": "^6.11.0",
