--- a/Front/tsconfig.json
+++ b/Front/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "types": ["node"],
     "target": "es5",
     "lib": [
       "dom",
@@ -18,11 +17,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    // "jsx": "react",
     "jsx": "react-jsx",
-    "baseUrl": "src",
-    // "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": false
+    "baseUrl": "./src",
+    "noFallthroughCasesInSwitch": true
   },
   "include": [
     "src"
